--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 body {
   width: 100vw;
   height: 100vh;
-  font-family: "Architects Daughter", cursive; Arial, Helvetica, sans-serif;
+  font-family: "Architects Daughter", cursive, Arial, Helvetica, sans-serif;
   letter-spacing: 3px;
   text-align: center;
   line-height: 2;
