--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ body {
   font-size: 33px;
   background-color: rgba(226, 224, 219, 0.596);
   color: rgb(8, 22, 14);
+  margin-right: -2.5rem;
 }
 
 .menu-wrap {
@@ -89,7 +90,6 @@ body {
   padding: 1rem;
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 
 /***********************************************************/
@@ -118,6 +118,10 @@ body {
 }
 
 .menu-wrap .hamburger > .hamburgerLine::after {
+  content: "Meny"; /* TO PUT MENU WORD AFTER THREE LINES */
+}
+
+.menu-wrap .hamburger > .hamburgerLine::after {
   top: 10px; /* WE USE THIS TO PUT THE THIRD LINE IN THIS POSITION */
 }
 
@@ -135,6 +139,10 @@ body {
 
 .menu-wrap .toggler:checked:hover + .hamburger > .hamburgerLine {
   transform: rotate(225deg);
+}
+
+.menu-wrap .toggler:checked + .hamburger > .hamburgerLine::after {
+  opacity: 0;
 }
 
 /**********************************************************/
@@ -273,7 +281,7 @@ body {
 /**********************************************/
 /* DESKTOP-TEXT */
 .desktop-intro,
-figcaption  {
+figcaption {
   display: none;
 }
 
@@ -301,7 +309,7 @@ figcaption  {
 }
 .contactFooter {
   padding: 3rem;
-    background-color: rgb(230, 216, 199);
+  background-color: rgb(230, 216, 199);
 }
 .contactLine {
   width: 100%;
@@ -425,5 +433,4 @@ figcaption  {
     font-size: 2rem;
     color: rgb(82, 3, 7);
   }
- 
 }
