--- a/css/style.css
+++ b/css/style.css
@@ -232,12 +232,15 @@ body {
   background: rgba(248, 245, 241, 0.013);
 }
 
-.shopping-button {
+.shopping-button,
+.load-btn {
   padding: 1rem 2rem;
+  font-size: 1.7rem;
+}
+.shopping-button {
   background-color: white;
   border: 1px solid white;
-  font-size: 1.7rem;
-
+  
 }
 
 .shopping-button:hover {
@@ -329,6 +332,9 @@ body {
 
 /* DESIGN.HTML */
 /* MAIN */
+.heading-design {
+  font-size: 2rem;
+}
 
 #image-boxes {
   display: flex;
@@ -347,6 +353,17 @@ body {
 .design-img {
   width: 70%;
   height: 65%;
+}
+
+.load-btn {
+  border: solid 1px gold;
+  color: #000;
+  margin-bottom: 1rem;
+}
+
+.load-btn:hover {
+   color: rgb(93, 226, 10);
+
 }
 
 /***************************************************/
