--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ body {
   position: absolute;
   z-index: 1;
   width: 74px;
-  height: 50px;
+  min-height: 65px;
   padding: 1rem;
   display: flex;
   align-items: center;
