--- a/css/style.css
+++ b/css/style.css
@@ -32,14 +32,13 @@ body {
   top: 0;
   left: 0;
   right: 0;
-  min-height: 17%;
+  min-height: 18.3%;
   background: rgba(166, 211, 188, 0.397);
 
 }
 
 #shopping-nav {
   display: flex;
-
   align-items: center;
   background-color: rgba(175, 129, 236, 0.185);
 }
@@ -50,7 +49,7 @@ body {
   font-style: normal;
   width: 78%;
   margin-left: 0.7rem;
-  height: 3rem;
+  min-height: 1.4rem;
   font-size: 30px;
   border: none;
 }
