--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,11 @@ body {
   color: #000;
 }
 
+.medlem-btn:hover {
+  background-color: black;
+  color: white;
+  border: 1px white solid;
+}
 
 /**********************************************************************/
 /* slide show */
